Bug 399846 - Custom Brushes behave differently after opening the brush editor (Some of the curves are different),
Summary: Custom Brushes behave differently after opening the brush editor (Some of the...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-15 17:08 UTC by Gremriel
Modified: 2019-04-17 07:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Brush setting sin 4.1.5 (127.14 KB, image/png)
2018-10-15 17:08 UTC, Gremriel
Details
Brush settings in the Nightly (157.65 KB, image/png)
2018-10-15 17:09 UTC, Gremriel
Details
(Linux Ubuntu test) (1.70 MB, video/mp4)
2018-10-16 11:05 UTC, mvowada
Details
Brush (162.62 KB, application/zip)
2018-10-19 12:29 UTC, Gremriel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gremriel 2018-10-15 17:08:45 UTC
Created attachment 115661 [details]
Brush setting sin 4.1.5

SUMMARY

In the latest Nightly (krita-nightly-x64-v4.1.3.1-315-g3f6177619d), my custom brushes behave differently, after I have opened the brush editor. Some of the curves (noticeably the ones for th etilt setting) are completely different compared how they are in 4.1.5.

STEPS TO REPRODUCE
(This assumes having created the custom brushes in a release build)
1. Start the Nightly, create a new document
2. Choose the custom brush
3. Start drawing; the behavior is as  expected.
4. Open brush editor and go to the settings that define the tilt behavior
5. Brush behaves differently.

OBSERVED RESULT

The settings for tilt are different (see screenshots)

EXPECTED RESULT

Brush should behave the same, with the same curves


SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: NA
KDE Frameworks Version: NA 
Qt Version: 

ADDITIONAL INFORMATION

Windows 10, nVidia GTX1070ti, 32gb RAM
Comment 1 Gremriel 2018-10-15 17:09:13 UTC
Created attachment 115662 [details]
Brush settings in the Nightly
Comment 2 mvowada 2018-10-16 11:05:40 UTC
Created attachment 115676 [details]
(Linux Ubuntu test)

Hi. For some reason it seems that I can't reproduce the issue in Linux Ubuntu 14.04 - Krita 4.1.5 stable... (see video). 
I've created the brush preset in v3 and then imported it in v4.1.5.

Could you share your preset for others to check? Thanks
Comment 3 mvowada 2018-10-16 11:07:58 UTC
(Changing the status to "neddsinfo")
Comment 4 Gremriel 2018-10-19 12:29:45 UTC
Created attachment 115746 [details]
Brush
Comment 5 mvowada 2018-10-19 14:26:48 UTC
Hi, I can confirm the different settings with 4.1.5 and 4.2.0. Thanks
Comment 6 Tiar 2019-04-17 07:07:33 UTC
Git commit 08f1cea63156ab72cde3b280127c205f9d2cb862 by Agata Cacko.
Committed on 17/04/2019 at 07:04.
Pushed by tymond into branch 'master'.

Fix tilt elevation curve not working correctly

Before this commit, tilt elevation curve was broken because
of addition of spinboxes which didn't allow for reverse range.
This commit provides reverse range calculations for spinboxes
and fixes multiple conversions between values inside curve widget.

M  +1    -0    libs/ui/CMakeLists.txt
M  +1    -0    libs/ui/tests/CMakeLists.txt
A  +115  -0    libs/ui/tests/KisSpinBoxSplineUnitConverterTest.cpp     [License: GPL (v2+)]
A  +49   -0    libs/ui/tests/KisSpinBoxSplineUnitConverterTest.h     [License: GPL (v2+)]
A  +28   -0    libs/ui/utils/KisSpinBoxSplineUnitConverter.cpp     [License: UNKNOWN]  *
A  +48   -0    libs/ui/utils/KisSpinBoxSplineUnitConverter.h     [License: GPL (v2+)]
M  +20   -9    libs/ui/widgets/kis_curve_widget.cpp
M  +13   -8    libs/ui/widgets/kis_curve_widget_p.h

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://commits.kde.org/krita/08f1cea63156ab72cde3b280127c205f9d2cb862