Fix tilt elevation curve not working correctly

Before this commit, tilt elevation curve was broken because
of addition of spinboxes which didn't allow for reverse range.
This commit provides reverse range calculations for spinboxes
and fixes multiple conversions between values inside curve widget.

BUG:399846